fdo#70376: Put only document (file) name in window title on OS X

(cherry picked from commit eeb840d6ba930015b969c3d0a98031f0ae508d61)

Change-Id: Ib45fdbdb734b439dea88d2269de86c82df31264f